// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when providing a URL string 1`] = `
<DocumentFragment>
  <div
    class="relative flex justify-end"
  >
    <img
      alt=""
      src="https://via.placeholder.com/500x500"
    />
    <h1
      class="flex flex-col justify-center w-1/2 z-10"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <div
        class="rounded-full overflow-visible absolute transform pointer-events-none translate-x-1/4 -translate-y-2/4 lg:-translate-y-3/4"
        style="color: rgb(255, 255, 255); right: 0px; top: 0px; width: 60vw; height: 60vw; border: 20px solid #fff; opacity: 0.1;"
      />
      <div
        class="rounded-full overflow-visible absolute transform pointer-events-none -translate-x-1/4 translate-y-2/4 lg:translate-y-3/4"
        style="color: rgb(255, 255, 255); left: 0px; bottom: 0px; width: 68vw; height: 68vw; border: 20px solid #fff; opacity: 0.2;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly when providing static image data 1`] = `
<DocumentFragment>
  <div
    class="relative flex justify-start"
  >
    <img
      alt=""
      src="[object Object]"
    />
    <h1
      class="flex flex-col justify-center w-1/2 z-10"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <div
        class="rounded-full overflow-visible absolute transform pointer-events-none translate-x-1/4 -translate-y-2/4 lg:-translate-y-3/4"
        style="color: rgb(255, 255, 255); right: 0px; top: 0px; width: 60vw; height: 60vw; border: 20px solid #fff; opacity: 0.1;"
      />
      <div
        class="rounded-full overflow-visible absolute transform pointer-events-none -translate-x-1/4 translate-y-2/4 lg:translate-y-3/4"
        style="color: rgb(255, 255, 255); left: 0px; bottom: 0px; width: 68vw; height: 68vw; border: 20px solid #fff; opacity: 0.2;"
      />
    </div>
  </div>
</DocumentFragment>
`;
